--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "backend",
+  "name": "nrfm-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "cross-env NODE_ENV=production PORT=4058 node server.js",
+    "dev": "cross-env NODE_ENV=development node server.js",
+    "test": "cross-env NODE_ENV=test node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-core": "^3.12.0",
-    "apollo-server-express": "^3.12.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "graphql": "^16.7.1",
-    "lint": "^0.8.19"
+    "cookie-parser": "^1.4.4",
+    "cross-env": "^7.0.3",
+    "elastic-apm-node": "^3.13.0",
+    "express": "latest",
+    "express-useragent": "^1.0.13",
+    "graphql": "^14.5.8",
+    "graphql-yoga": "^1.18.3",
+    "helmet": "^3.21.2",
+    "merge-graphql-schemas": "^1.7.3",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "nrfm-lib": "file:../nrfm-lib"
   }
 }
