--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nrfm-server",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "main": "server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production PORT=4058 node server.js",
     "dev": "cross-env NODE_ENV=development node server.js",
@@ -21,7 +22,6 @@
     "helmet": "^3.21.2",
     "merge-graphql-schemas": "^1.7.3",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "nrfm-lib": "file:../nrfm-lib"
+    "moment-timezone": "^0.5.27"
   }
 }
