--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "./server.js" }]
+  "version": 2,
+  "name": "backend",
+  "builds": [
+     { "src": "server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+     { "src": "/(.*)", "dest": "/server.js" }
+  ]
 }
