--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production PORT=4058 node server.js",
-    "dev": "cross-env NODE_ENV=development node server.js",
-    "test": "cross-env NODE_ENV=test node server.js"
+    "start": "cross-env NODE_ENV=development node server.js"
   },
   "keywords": [],
   "author": "",
