--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
