--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-core": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "elastic-apm-node": "^3.13.0",
     "express": "latest",
