--- a/package.json
+++ b/package.json
@@ -9,19 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-core": "^3.12.0",
-    "apollo-server-express": "^3.12.0",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "elastic-apm-node": "^3.13.0",
-    "express": "latest",
-    "express-useragent": "^1.0.13",
-    "graphql": "^14.5.8",
-    "graphql-yoga": "^1.18.3",
-    "helmet": "^3.21.2",
-    "merge-graphql-schemas": "^1.7.3",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27"
+    "@apollo/server": "^4.10.0",
+    "apollo-server": "^3.13.0",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "^5.1.1",
+    "http": "^0.0.1-security",
+    "merge-graphql-schemas": "^1.7.8"
   }
 }
